# Kinoko_bot

./: .gitignore  BotConstant.h  CMakeLists.txt  Logger.cpp  Logger.h  MessageChain.cpp  MessageChain.h  MessageEvent.cpp  MessageEvent.h  README.md  TestChat.cpp  TestChat.h  TypeDefine.h  dependency.h  go_cqHttp_EndPoint.h  main.cpp  test.cpp
Chat/: Chat.cpp  Chat.h  ChatCache.h  ChatMemory.cpp  CurrentSpeaker.cpp  CurrentSpeaker.h  ThreadsafeQueue.h
ChatBot/: ChatBot.cpp  ChatBot.h  ChatCache.cpp  ChatCache.h  ChatMemory.h  CompletionParameter.cpp  CompletionParameter.h
OpenAI_API/: OpenAI_API.cpp  OpenAI_API.h
RoleplayModule/: CompletionParameter.h  Roleplay.cpp  Roleplay.h  RoleplayCache.cpp  RoleplayCache.h
WebsocketServer/: WebsocketServer.cpp
